--- a/2b/lab2b/priorityqueuewindow.ui
+++ b/2b/lab2b/priorityqueuewindow.ui
@@ -65,7 +65,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Demo</string>
+    <string>👀 Demo</string>
    </property>
   </widget>
   <widget class="QPushButton" name="loadTunnelDeepButton">
@@ -83,7 +83,7 @@
   </widget>
   <widget class="QPushButton" name="addRandomEventButton">
    <property name="enabled">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
@@ -94,7 +94,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>➕ Random event</string>
+    <string>➕ Random game event</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
@@ -362,6 +362,54 @@ QTableView::item {
    </property>
    <property name="minimum">
     <number>1</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="errorLabel">
+   <property name="geometry">
+    <rect>
+     <x>1150</x>
+     <y>600</y>
+     <width>191</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+	font-size: 17px;
+	color: red;
+	font-family: Roboto;
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="demoModeLabel">
+   <property name="geometry">
+    <rect>
+     <x>1090</x>
+     <y>10</y>
+     <width>391</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {
+	color: orange;
+	font-size: 35px;
+	font-family: Roboto;
+	background-color: transparent;
+	text-decoration: underline;
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
  </widget>
