--- a/3a/benchmarkwindow.ui
+++ b/3a/benchmarkwindow.ui
@@ -50,7 +50,7 @@ font-family: Roboto;</string>
   <widget class="QPushButton" name="testAllButton">
    <property name="geometry">
     <rect>
-     <x>1060</x>
+     <x>1040</x>
      <y>830</y>
      <width>161</width>
      <height>51</height>
@@ -63,7 +63,7 @@ font-family: Roboto;</string>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>290</x>
      <y>830</y>
      <width>401</width>
      <height>51</height>
@@ -78,7 +78,7 @@ border-radius: 5px;
    <property name="title">
     <string/>
    </property>
-   <widget class="QRadioButton" name="radioButton">
+   <widget class="QRadioButton" name="randomRadio">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -94,7 +94,7 @@ border-radius: 5px;
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QRadioButton" name="radioButton_2">
+   <widget class="QRadioButton" name="ascendingRadio">
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -107,7 +107,7 @@ border-radius: 5px;
      <string>Almost ascending</string>
     </property>
    </widget>
-   <widget class="QRadioButton" name="radioButton_3">
+   <widget class="QRadioButton" name="descendingRadio">
     <property name="geometry">
      <rect>
       <x>260</x>
@@ -141,7 +141,7 @@ font-weight: 500;</string>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>740</x>
+     <x>760</x>
      <y>830</y>
      <width>211</width>
      <height>51</height>
@@ -235,7 +235,7 @@ font-weight: 500;</string>
     </property>
    </widget>
   </widget>
-  <widget class="QTableWidget" name="arrayTable">
+  <widget class="QTableWidget" name="selectionTable">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -314,7 +314,7 @@ color: #e66739;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="testArrayButton">
+  <widget class="QPushButton" name="testSelectionSortButton">
    <property name="geometry">
     <rect>
      <x>70</x>
@@ -349,7 +349,7 @@ color: #e66739;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="testArrayButton_2">
+  <widget class="QPushButton" name="testQuickSortButton">
    <property name="geometry">
     <rect>
      <x>370</x>
@@ -362,7 +362,7 @@ color: #e66739;</string>
     <string>Bench</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="arrayTable_2">
+  <widget class="QTableWidget" name="quickTable">
    <property name="geometry">
     <rect>
      <x>320</x>
@@ -419,7 +419,7 @@ QTableView::item {
     </property>
    </column>
   </widget>
-  <widget class="QTableWidget" name="arrayTable_3">
+  <widget class="QTableWidget" name="mergeTable">
    <property name="geometry">
     <rect>
      <x>620</x>
@@ -498,7 +498,7 @@ color: #e66739;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="testArrayButton_3">
+  <widget class="QPushButton" name="testMergeSortButton">
    <property name="geometry">
     <rect>
      <x>670</x>
@@ -533,7 +533,7 @@ color: #e66739;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="testArrayButton_4">
+  <widget class="QPushButton" name="testHybridSortButton">
    <property name="geometry">
     <rect>
      <x>970</x>
@@ -546,7 +546,7 @@ color: #e66739;</string>
     <string>Bench</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="arrayTable_4">
+  <widget class="QTableWidget" name="hybridTable">
    <property name="geometry">
     <rect>
      <x>920</x>
@@ -594,12 +594,12 @@ QTableView::item {
    </column>
    <column>
     <property name="text">
-     <string>Arr type</string>
+     <string>Step</string>
     </property>
    </column>
    <column>
     <property name="text">
-     <string>Step</string>
+     <string>Arr type</string>
     </property>
    </column>
    <column>
@@ -630,7 +630,7 @@ color: #e66739;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="testArrayButton_5">
+  <widget class="QPushButton" name="testLibrarySortButton">
    <property name="geometry">
     <rect>
      <x>1270</x>
@@ -643,7 +643,7 @@ color: #e66739;</string>
     <string>Bench</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="arrayTable_5">
+  <widget class="QTableWidget" name="libraryTable">
    <property name="geometry">
     <rect>
      <x>1220</x>
@@ -705,21 +705,21 @@ QTableView::item {
   <zorder>pageName</zorder>
   <zorder>backButton</zorder>
   <zorder>testAllButton</zorder>
-  <zorder>arrayTable</zorder>
+  <zorder>selectionTable</zorder>
   <zorder>label_6</zorder>
-  <zorder>testArrayButton</zorder>
+  <zorder>testSelectionSortButton</zorder>
   <zorder>label_7</zorder>
-  <zorder>testArrayButton_2</zorder>
-  <zorder>arrayTable_2</zorder>
-  <zorder>arrayTable_3</zorder>
+  <zorder>testQuickSortButton</zorder>
+  <zorder>quickTable</zorder>
+  <zorder>mergeTable</zorder>
   <zorder>label_8</zorder>
-  <zorder>testArrayButton_3</zorder>
+  <zorder>testMergeSortButton</zorder>
   <zorder>label_9</zorder>
-  <zorder>testArrayButton_4</zorder>
-  <zorder>arrayTable_4</zorder>
+  <zorder>testHybridSortButton</zorder>
+  <zorder>hybridTable</zorder>
   <zorder>label_10</zorder>
-  <zorder>testArrayButton_5</zorder>
-  <zorder>arrayTable_5</zorder>
+  <zorder>testLibrarySortButton</zorder>
+  <zorder>libraryTable</zorder>
  </widget>
  <resources/>
  <connections/>
