--- a/3a/benchmarkwindow.ui
+++ b/3a/benchmarkwindow.ui
@@ -13,27 +13,6 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="pageName">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1501</width>
-     <height>91</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: orange;
-font-size: 35px;
-font-family: Roboto;</string>
-   </property>
-   <property name="text">
-    <string>Benchmark</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QPushButton" name="backButton">
    <property name="geometry">
     <rect>
@@ -200,7 +179,7 @@ font-weight: 500;</string>
      </rect>
     </property>
     <property name="minimum">
-     <number>1</number>
+     <number>2</number>
     </property>
     <property name="maximum">
      <number>100000000</number>
@@ -222,7 +201,7 @@ font-weight: 500;</string>
      </rect>
     </property>
     <property name="minimum">
-     <number>1</number>
+     <number>2</number>
     </property>
     <property name="maximum">
      <number>100000000</number>
@@ -700,9 +679,48 @@ QTableView::item {
     </property>
    </column>
   </widget>
+  <widget class="QGroupBox" name="groupBox_13">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>-10</y>
+     <width>321</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox {
+	background-color: #c4c4c4;
+border-radius: 5px;
+}</string>
+   </property>
+   <property name="title">
+    <string/>
+   </property>
+   <widget class="QLabel" name="pageName">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>301</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white;
+font-size: 35px;
+font-family: Roboto;</string>
+    </property>
+    <property name="text">
+     <string>Benchmark</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+  </widget>
   <zorder>groupBox_2</zorder>
   <zorder>groupBox</zorder>
-  <zorder>pageName</zorder>
   <zorder>backButton</zorder>
   <zorder>testAllButton</zorder>
   <zorder>selectionTable</zorder>
@@ -720,6 +738,7 @@ QTableView::item {
   <zorder>label_10</zorder>
   <zorder>testLibrarySortButton</zorder>
   <zorder>libraryTable</zorder>
+  <zorder>groupBox_13</zorder>
  </widget>
  <resources/>
  <connections/>
